themes/haSepharadi/scss/partials/_common-classes.scss
/* Common Classes
---------------------------------------------------------------------------------------------------- */

/* Avatar
--------------------------------------------- */

.avatar {
  border-radius: 50%;
  float: left;
}

.author-box .avatar,
.alignleft .avatar {
  margin-right: 20px;
}

.alignright .avatar {
  margin-left: 20px;
}

.comment .avatar {
  margin: 0 15px 20px 0;
}

/* Genesis
--------------------------------------------- */

.after-entry,
.archive-description,
.author-box {
  margin-bottom: 40px;
}

.after-entry {
  box-shadow: 0 0 20px $black-alpha-2;
  padding: 20px 30px;

  .widget:last-of-type {
    margin-bottom: 0;
  }
}

.breadcrumb {
  border-bottom: $border-width $border-style $border-color;
  font-size: $body--font-size;
  margin-bottom: 40px;
  padding-bottom: 10px;
}

.archive-description p:last-child,
.author-box p:last-child {
  margin-bottom: 0;
}

/* Search Form
--------------------------------------------- */

.search-form {
  overflow: hidden;
}

.entry-content {

  .search-form {
    margin-bottom: 40px;
    width: 50%;
  }

  p.wp-caption-text {
    margin-bottom: 0;
  }

  .wp-audio-shortcode,
  .wp-playlist,
  .wp-video {
    margin: 0 0 30px;
  }
}

.post-password-form input[type='submit'],
.search-form input[type='submit'] {
  margin-top: 10px;
}

.widget_search input[type='submit'] {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  padding: 0;
  position: absolute;
  width: 1px;
}

// Some more changes y'all


/* Titles
--------------------------------------------- */

.archive-description .entry-title,
.archive-title,
.author-box-title {
  font-size: 2rem;
  font-weight: 600;
  margin-bottom: 10px;
}

.entry-title {
  font-size: 30px;
  font-size: 3rem;
  margin-bottom: 10px;
}

.entry-title a,
.sidebar .widget-title a {
  color: $black;
  text-decoration: none;
}

.entry-title a:focus,
.entry-title a:hover {
  color: $orange;
}

/* WordPress
--------------------------------------------- */

.aligncenter {
  text-align: center;
}

a.aligncenter img {
  display: block;
  margin: 0 auto;
}

a.alignnone {
  display: inline-block;
}

.alignleft {
  float: left;
  text-align: left;
}

.alignright {
  float: right;
  text-align: right;
}

a.alignleft,
a.alignnone,
a.alignright {
  max-width: 100%;
}

img.centered,
.aligncenter {
  display: block;
  margin: 0 auto 30px;
}

img.alignnone,
.alignnone {
  margin-bottom: 15px;
}

a.alignleft,
img.alignleft,
.wp-caption.alignleft {
  margin: 0 20px 20px 0;
}

a.alignright,
img.alignright,
.wp-caption.alignright {
  margin: 0 0 20px 20px;
}

.gallery-caption,
.wp-caption-text {
  font-size: 1.4rem;
  font-weight: 600;
  margin: 0;
  text-align: center;
}

